--- a/index.html
+++ b/index.html
@@ -280,7 +280,8 @@
                             <div class="eximia-portfolio-card-footer">
                                 <div class="eximia-portfolio-card-title">
                                     <span class="eximia-meta">HCSSF</span>
-                                    <h6>Capacitación Kubernetes</h6>
+                                    <h6>Capacitación Kubernetes Lorem ipsum dolor sit amet consectetur
+                                    </h6>
                                 </div>
                                 <span class="eximia-icon eximia-icon-explore"></span>
                             </div>
@@ -370,10 +371,10 @@
         </footer>
     </main>
 
-    <div class="eximia-rcp-wrap">
+    <!-- <div class="eximia-rcp-wrap">
         <div class="eximia-rcp-overlay"></div>
         <div class="eximia-rcp-container"></div>
-    </div>
+    </div> -->
 
     <div class="eximia-backlight"></div>
 
